tests/fixtures/ec2_describe-vpcs.json
{
  "Vpcs": [
    {
      "VpcId": "vpc-0aaaaaaaaaaaaaaaa",
      "CidrBlock": "10.0.0.0/16",
      "IsDefault": false,
      "Tags": [{"Key": "Name", "Value": "primary-vpc"}]
    },
    {
      "VpcId": "vpc-0defdefdefdefdefd",
      "CidrBlock": "172.31.0.0/16",
      "IsDefault": true,
      "Tags": []
    }
  ]
}
